# shaders

./: CMakeLists.txt  Readme.md  complex.glsl  complex_main.glsl  complex_sin.glsl  gravity.glsl  main.cpp  mandelbrot.glsl  newton.glsl  rainbow.glsl
CMake/Modules/: FindSDL2.cmake
